tests/baselines/reference/additionOperatorWithUndefinedValueAndInvalidOperands.errors.txt
==== tests/cases/compiler/additionOperatorWithUndefinedValueAndInvalidOperands.ts (11 errors) ====
    // If one operand is the null or undefined value, it is treated as having the type of the other operand.
    
    function foo(): void { return undefined }
    
    var a: boolean;
    var b: Object;
    var c: void;
    var d: Number;
    
    // undefined + boolean/Object
    var r1 = undefined + a;
             ~~~~~~~~~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(11,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r2 = undefined + b;
             ~~~~~~~~~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(12,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r3 = undefined + c;
             ~~~~~~~~~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(13,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r4 = a + undefined;
             ~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(14,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r5 = b + undefined;
             ~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(15,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r6 = undefined + c;
             ~~~~~~~~~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(16,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    // other cases
    var r7 = undefined + d;
             ~~~~~~~~~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(19,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r8 = undefined + true;
             ~~~~~~~~~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(20,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r9 = undefined + { a: '' };
             ~~~~~~~~~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(21,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r10 = undefined + foo();
              ~~~~~~~~~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(22,11): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r11 = undefined + (() => { });
              ~~~~~~~~~
!!! additionOperatorWithUndefinedValueAndInvalidOperands.ts(23,11): error TS2111: Invalid '+' expression - types not known to support the addition operator.